--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "node-sass": "^7.0.3",
+    "rc-table": "^7.27.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
